--- a/styles/components/singletons/PageHeader.module.scss
+++ b/styles/components/singletons/PageHeader.module.scss
@@ -5,12 +5,13 @@
   top: 0;
   left: 0;
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+  z-index: 100000;
 
   display: grid;
   grid-template: 1fr / auto 1fr;
 
   padding: 0 48px 0 24px;
-
+  background: var(--color-white);
   user-select: none;
 
   @media screen and (max-width: 1080px) {
@@ -83,7 +84,8 @@
     transform: translate(64px, 0);
     &,
     * {
-      pointer-events: none;
+      // What have I done?
+      pointer-events: none !important;
     }
     &::before {
       content: '';
@@ -93,7 +95,7 @@
       left: 0;
       bottom: 0;
       right: 0;
-      background-color: rgba(0, 0, 0, 0.2);
+      background-color: rgba(0, 0, 0, 0.7);
       z-index: -1;
       opacity: 0;
       transition: opacity 0.2s ease 0.1s;
@@ -215,6 +217,6 @@
   }
   &,
   * {
-    pointer-events: auto;
+    pointer-events: auto !important;
   }
 }
