--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,8 @@ html,
 body {
   padding: 0;
   margin: 0;
+  color: var(--color-dark-gray);
+  overflow-x: hidden;
 }
 
 * {
@@ -67,4 +69,12 @@ small,
   font-weight: 500;
   font-style: normal;
   line-height: 1.5em;
+}
+
+.text-red {
+  color: var(--color-campaign-red);
+}
+
+.text-blue {
+  color: var(--color-campaign-light-blue);
 }
