--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -64,8 +64,14 @@
     margin-bottom: 24px;
   }
 
-  a:first-of-type {
+  .instagram {
     margin-bottom: 48px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    a:first-child {
+      margin-bottom: 18px;
+    }
   }
 
   @media screen and (max-width: 440px) {
