--- a/styles/AboutLys.module.scss
+++ b/styles/AboutLys.module.scss
@@ -71,11 +71,11 @@
       float: none;
       margin: 48px 0 32px 0;
       max-width: 400px;
-      width: 100%;
+      width: 45vw;
       height: 250px;
       img {
-        width: 100%;
-        height: 100%;
+        width: 45vw;
+        height: 250px;
         object-fit: cover;
         object-position: center top;
       }
@@ -84,8 +84,13 @@
         height: 100px;
         left: auto;
         top: -16px;
-        right: -12px;
+        right: -16px;
         border-width: 5px;
+        @media screen and (max-width: 500px) {
+          right: auto;
+          left: 32px;
+          width: 50vw;
+        }
       }
     }
   }
