--- a/styles/AboutWeston.module.scss
+++ b/styles/AboutWeston.module.scss
@@ -25,7 +25,7 @@
   .photo {
     position: relative;
     float: right;
-    margin: 0 0 100px 64px;
+    margin: 0 0 75px 64px;
     display: block;
 
     img {
@@ -36,7 +36,7 @@
 
     .decor {
       position: absolute;
-      top: 300px;
+      top: 250px;
       left: -24px;
       width: 200px;
       height: 300px;
@@ -50,18 +50,19 @@
         width: 300px;
       }
       .decor {
-        top: 250px;
+        top: 220px;
         left: -24px;
         width: 150px;
         height: 200px;
       }
     }
     @media screen and (max-width: 820px) {
+      margin-bottom: 32px;
       img {
         width: 250px;
       }
       .decor {
-        top: 190px;
+        top: 140px;
         left: -24px;
         width: 100px;
         height: 200px;
@@ -71,24 +72,26 @@
       float: none;
       margin: 48px 0 32px 0;
       max-width: 400px;
-      width: 100%;
+      width: 45vw;
       height: 250px;
       img {
-        width: 100%;
-        height: 100%;
+        width: 45vw;
+        height: 250px;
         object-fit: cover;
-        object-position: center -120px;
-        @media screen and (max-width: 440px) {
-          object-position: center -90px;
-        }
+        object-position: center top;
       }
       .decor {
         width: 200px;
         height: 100px;
         left: auto;
         top: -16px;
-        right: -12px;
+        right: -16px;
         border-width: 5px;
+        @media screen and (max-width: 500px) {
+          right: auto;
+          left: 32px;
+          width: 50vw;
+        }
       }
     }
   }
