--- a/styles/WhyUs.module.scss
+++ b/styles/WhyUs.module.scss
@@ -31,6 +31,10 @@
     align-items: flex-start;
     justify-content: flex-start;
   }
+
+  .cover {
+    margin-bottom: 32px;
+  }
 }
 
 .sectionTwo {
