--- a/styles/globals.css
+++ b/styles/globals.css
@@ -78,3 +78,16 @@ small,
 .text-blue {
   color: var(--color-campaign-light-blue);
 }
+
+.fade-in {
+  animation: fade-in 0.25s ease 0s 1 both;
+}
+.fade-in-long {
+  animation: fade-in 2s ease 0s 1;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+}
